--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/stratajs/strata#readme",
   "devDependencies": {
     "parcel": "^1.12.4"
-  }
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
